<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_bottom_icon"
        android:title="@string/my_investments"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_bottom_icon"
        android:title="@string/search"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/history_bottom_icon"
        android:title="@string/history_text"
        app:labelVisibilityMode="unlabeled"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_bottom_icon"
        android:title="@string/profile"
        app:labelVisibilityMode="unlabeled"/>
</menu>