<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="23dp"
    android:layout_gravity="center"
    android:text="@string/market_review"
    android:textAppearance="@style/Text.Bold.20"/>
    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="35dp"
        android:paddingStart="16dp"
        android:hint="@string/search"
        android:textColorHint="@color/hint"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/magnifying_glass"
        android:drawablePadding="16dp"
        android:textAppearance="@style/Text.Regular.14"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/filter_by_marketcap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:text="@string/top_market_cap"
            android:textAppearance="@style/Text.Medium.16"
            android:textColor="@color/black"
            tools:backgroundTint="@color/main_background" />

        <Button
            android:id="@+id/filter_by_change_percent_24Hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:text="@string/top_day_percent"
            android:textAppearance="@style/Text.Medium.16"
            android:textColor="@color/black"
            tools:backgroundTint="@color/view_background" />

        <Button
            android:id="@+id/filter_by_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/arrow_top_green"
            android:paddingHorizontal="12dp"
            android:paddingVertical="12dp"
            android:text="@string/price"
            android:textAppearance="@style/Text.Medium.16"
            android:textColor="@color/black"
            tools:backgroundTint="@color/view_background" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/market_review_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        tools:listitem="@layout/coin_item"/>
</LinearLayout>