<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:text="@string/market_review"
        android:textAppearance="@style/Text.Bold.20"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/edit_text_style"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/circle_close"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/cancelTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <AutoCompleteTextView
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/magnifying_glass"
            android:drawablePadding="16dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textAppearance="@style/Text.Regular.14"
            android:textColorHint="@color/hint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_by_marketcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="11dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/top_market_cap"
        android:textAppearance="@style/Text.Medium.16"
        android:textColor="?attr/colorOnBackground"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/filter_by_change_percent_24Hr"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:backgroundTint="?attr/colorAccent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_by_change_percent_24Hr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/top_day_percent"
        android:textAppearance="@style/Text.Medium.16"
        android:textColor="?attr/colorOnBackground"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:backgroundTint="?attr/colorPrimaryVariant" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_by_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:text="@string/price"
        android:textAppearance="@style/Text.Medium.16"
        android:textColor="?attr/colorOnBackground"
        android:visibility="visible"
        app:icon="@drawable/arrow_top_green"
        app:iconGravity="end"
        app:iconPadding="2dp"
        app:iconSize="24dp"
        app:iconTint="@color/label"
        app:layout_constraintStart_toEndOf="@+id/filter_by_change_percent_24Hr"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:backgroundTint="?attr/colorPrimaryVariant" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/market_review_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="19dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:listitem="@layout/coin_item" />

    <TextView
        android:id="@+id/youSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="23dp"
        android:text="@string/you_search"
        android:textAppearance="@style/Text.SemiBold.16"
        android:textColor="?attr/colorOnBackground"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/clear_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/clear"
        android:textAppearance="@style/Text.Bold.16"
        android:textColor="@color/btn_clear"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/network_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/network_error"
        android:textAlignment="center"
        android:textAppearance="@style/Text.SemiBold.17"
        android:textColor="?attr/colorOnBackground"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_change_percent_24Hr" />

    <ImageView
        android:id="@+id/network_error_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_error_tv"
        app:srcCompat="@drawable/world_wide_web" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:indeterminateTint="?attr/colorAccent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_by_change_percent_24Hr" />

    <TextView
        android:id="@+id/cancelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:text="@string/cancel"
        android:textAppearance="@style/Text.Bold.16"
        android:textColor="?attr/colorAccent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>