<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:background="@drawable/my_investments_background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_investments_text"
        style="@style/Text.Bold.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/portfolio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance"
        style="@style/Text.Medium.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_investments_text" />

    <TextView
        android:id="@+id/balance_text"
        style="@style/Text.SemiBold.30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        tools:text="$50,540.00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balance" />

    <TextView
        android:id="@+id/percent"
        style="@style/Text.Medium.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/percent_background"
        android:paddingHorizontal="10dp"
        android:paddingVertical="4dp"
        tools:text="+5.21%"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/my_investments_text"
        app:layout_constraintTop_toBottomOf="@id/balance" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/account_funds_text"
        style="@style/Text.SemiBold.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/account_funds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart" />

    <TextView
        android:id="@+id/account_funds"
        style="@style/Text.SemiBold.15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        tools:text="0$"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_funds_text" />

    <Button
        android:id="@+id/top_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/top_up_btn_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/top_up"
        android:textAppearance="@style/Text.Medium.14"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        tools:listitem="@layout/coin_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_funds" />

    <TextView
        android:id="@+id/assets_are_empty"
        style="@style/Text.SemiBold.17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/assets_are_empty"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_funds" />

    <TextView
        android:id="@+id/network_error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_error"
        android:textAlignment="center"
        android:textAppearance="@style/Text.SemiBold.17"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_funds" />

    <ImageView
        android:id="@+id/network_error_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_error_tv"
        app:srcCompat="@drawable/world_wide_web" />

</androidx.constraintlayout.widget.ConstraintLayout>