<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    android:elevation="@dimen/alerts_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="140dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/transparent"
            android:gravity="center"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/no"
            android:textAllCaps="true"
            android:textAppearance="@style/Text.SemiBold.14"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@+id/ok"
            app:layout_constraintTop_toTopOf="@+id/ok" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/yes_exactly"
            android:textAllCaps="true"
            android:textAppearance="@style/Text.SemiBold.14"
            android:textColor="?attr/colorOnBackground"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/asking_to_delete_profile"
            android:textAppearance="@style/Text.Regular.16"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
